WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
127499
[WinCairo] Compile error.
https://bugs.webkit.org/show_bug.cgi?id=127499
Summary
[WinCairo] Compile error.
peavo
Reported
2014-01-23 11:43:18 PST
I'm currently getting some compile errors building WinCairo. The reason is that <curl/curl.h> is included without including <winsock2.h> first (in WebCore/platform/network/curl/ResourceError.h).
Attachments
Patch
(1.05 KB, patch)
2014-01-23 11:47 PST
,
peavo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
peavo
Comment 1
2014-01-23 11:47:43 PST
Created
attachment 222009
[details]
Patch
Brent Fulgham
Comment 2
2014-01-23 12:46:37 PST
Comment on
attachment 222009
[details]
Patch r=me
WebKit Commit Bot
Comment 3
2014-01-23 13:15:03 PST
Comment on
attachment 222009
[details]
Patch Clearing flags on attachment: 222009 Committed
r162636
: <
http://trac.webkit.org/changeset/162636
>
WebKit Commit Bot
Comment 4
2014-01-23 13:15:05 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug