[WinCairo] Compile error. https://bugs.webkit.org/show_bug.cgi?id=127499

Patch by peavo@outlook.com <peavo@outlook.com> on 2014-01-23
Reviewed by Brent Fulgham.

* platform/network/curl/ResourceError.h: Include <winsock2.h> before <curl/curl.h>.

Canonical link: https://commits.webkit.org/145515@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@162636 268f45cc-cd09-0410-ab3c-d52691b4dbfc